--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,6 @@
-<h1> index page of posts</h1>
+<%= @posts.each do |post| %>
+  <div class="post_wrapper">
+    <h2 class="title"><%= link_to post.title, post %></h2>
+    <p class="date"><%= time_ago_in_words(post.created_at)%>ago</p>
+  </div>
+  <% end %>
